<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent"
    android:background="@drawable/a1">

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_city"
        android:textSize="50sp"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree"
        android:textSize="80sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:layout_toEndOf="@+id/temprature"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/temprature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginStart="50dp"
        android:text="@string/default_value"
        android:textSize="140sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/icon"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:layout_marginTop="190dp"
        android:layout_toEndOf="@+id/degree"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginStart="40dp">

        <TextView
            android:text="@string/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/default_value"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <TextView
            android:text="@string/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/default_value"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"/>
        <TextView
            android:text="@string/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/default_value"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"/>
        <TextView
            android:text="@string/winbd_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"/>


    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@color/transparent_white">

        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/table_layout"/>

    </ScrollView>





</RelativeLayout>