<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TableLayout
        android:id="@+id/table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TableRow
            android:id="@+id/row0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent_yellow">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/head_textview"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/heading_day"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/heading_temprature"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/heading_humidity"
                    android:textSize="30sp" />


            </LinearLayout>
        </TableRow>




        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/day2_name"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/day_name"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/day2_temp"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/day_temprature"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/day2_humd"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/day_humidity"
                    android:textSize="30sp" />


            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/day3_name"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/day_name"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/day3_temp"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/day_temprature"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/day3_humd"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/day_humidity"
                    android:textSize="30sp" />


            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/day4_name"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/day_name"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/day4_temp"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/day_temprature"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/day4_humd"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/day_humidity"
                    android:textSize="30sp" />


            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/day5_name"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/day_name"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/day5_temp"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/day_temprature"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/day5_humd"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/day_humidity"
                    android:textSize="30sp" />


            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/row5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/day6_name"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/day_name"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/day6_temp"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/day_temprature"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/day6_humd"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/day_humidity"
                    android:textSize="30sp" />


            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/row6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/day7_name"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/day_name"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/day7_temp"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/day_temprature"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/day7_humd"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/day_humidity"
                    android:textSize="30sp" />


            </LinearLayout>
        </TableRow>



    </TableLayout>

</RelativeLayout>